--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <title>WS Domsters: Contact</title>
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <style>
+  .btn-primary {
+    margin-top: 10px;
+  }
+  </style>
 </head>
 
 <body>
@@ -13,19 +19,30 @@
       <img src="img/logo.gif" alt="Jay Skript and the Domsters" />
     </header>
     <!-- END header -->
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="photos.html">Photos</a></li>
-        <li><a href="live.html">Live</a></li>
-        <li><a href="contact.html">Contact</a></li>
+    <nav class="navbar navbar-light bg-faded">
+      <a class="navbar-brand" href="#">Lipsync-Battle</a>
+      <ul class="nav navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="photos.html">Photos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="live.html">Live</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
       </ul>
     </nav>
     <!-- END nav -->
     <div class="content">
       <h1>Contact the band</h1>
-      <form method="post" action="#">
+      <!-- <form method="post" action="#">
         <fieldset>
           <p>
             <label for="name">Name:</label>
@@ -41,6 +58,21 @@
           </p>
           <input type="submit" value="Send" />
         </fieldset>
+      </form> -->
+      <form>
+        <div class="form-group">
+          <label for="formGroupExampleInput">Name:</label>
+          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Name">
+        </div>
+        <div class="form-group">
+          <label for="formGroupExampleInput2">Email Address:</label>
+          <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="hello@example.com">
+          <div class="form-group">
+            <label for="formGroupExampleInput2">Message:</label>
+            <textarea type="text" class="form-control" id="formGroupExampleInput2" placeholder="Message here."></textarea>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </div>
       </form>
     </div>
     <!-- END .content -->
